force-app/main/default/objects/Goal__c/Goal__c.object-meta.xml
<CustomObject>
    <description>The new Custom Object &quot;Goal&quot; is created for the Client Plan Requirement (Case 2491 - Create Client Level Business Plan Tab)</description>
    <label>Goal</label>
    <nameField>
        <displayFormat>GL-{0000}</displayFormat>
        <label>Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>