force-app/main/default/objects/Goal__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Protect / Renew Current Book of Business (Mandatory Goal)</fullName>
            </value>
            <value>
                <fullName>Attain / Maintain NPS Promoter Rating (Mandatory Goal)</fullName>
            </value>
            <value>
                <fullName>Grow Medical business</fullName>
            </value>
            <value>
                <fullName>Grow Rx business</fullName>
            </value>
            <value>
                <fullName>Grow Specialty business</fullName>
            </value>
            <value>
                <fullName>Grow Optum Health business</fullName>
            </value>
            <value>
                <fullName>Grow other UHG products</fullName>
            </value>
            <value>
                <fullName>Enhance B2B Business/Opportunities</fullName>
            </value>
            <value>
                <fullName>Enhance C-Suite/Decision Maker relationships</fullName>
            </value>
            <value>
                <fullName>Support Corporate Social Responsibility</fullName>
            </value>
            <value>
                <fullName>Enhance Consultant/Consulting Firm relationships</fullName>
            </value>
            <value>
                <fullName>Motivate Health Ownership</fullName>
            </value>
            <value>
                <fullName>Address Private Exchange opportunities</fullName>
            </value>
            <value>
                <fullName>Improve Medical trend performance</fullName>
            </value>
            <value>
                <fullName>Improve Clinical performance</fullName>
            </value>
            <value>
                <fullName>Improve Service performance</fullName>
            </value>
            <value>
                <fullName>Improve Rx service performance</fullName>
            </value>
            <value>
                <fullName>COVID Distressed Industry Tracker</fullName>
            </value>
            <value>
                <fullName>Other client specific goals (Free Form/Write In)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>