force-app/main/default/objects/Goal__c/fields/Goal_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Goal_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Goal Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>