force-app/main/default/objects/Goal__c/fields/Sales_Season__c.field-meta.xml
<CustomField>
    <fullName>Sales_Season__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Season</label>
    <length>55</length>
    <type>Text</type>
</CustomField>